fix gap between search result cards

--- a/app/assets/styles/cards.css
+++ b/app/assets/styles/cards.css
@@ -202,6 +202,10 @@
     margin-top: 2rem;
   }
 
+  .card-list--single .card-short {
+    margin-top: 0;
+  }
+
   /* Horrible hack that looks bad */
   .content-card--page-card .card-short {
     height: fit-content;
